fixed broken ui for mobile (main_panel_components was height 0)

--- a/src/pages/Dashboard/Superuser/dashboard/Complaints/styles/SuperUserComplaints.module.scss
+++ b/src/pages/Dashboard/Superuser/dashboard/Complaints/styles/SuperUserComplaints.module.scss
@@ -112,6 +112,7 @@
                 height: 100%;
                 overflow: auto;
                 padding-top: 10px;
+                padding-bottom: 40px;
 
                 .message_block {
                     display: grid;
@@ -414,6 +415,7 @@
                     }
                     .attachments_list {
                         grid-template-columns: 1fr 1fr;
+
                         img {
                             width:100%;
                         }
