--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -36,7 +36,8 @@ body {
   background-color: $primary-bg-color;
 }
 .main_panel_components {
-  height: 0;
+  height: 100vh;
+  padding-bottom: 50px;
   flex-grow: 2;
 }
 @media screen and (max-width: $lg-screen) {
